Remove backface visibility to fix some chrome bugs on some chrome browsers

--- a/php/dev/assets/css/style.css
+++ b/php/dev/assets/css/style.css
@@ -2385,7 +2385,7 @@ Centered grids align grid items centrally without needing to use push or pull cl
 .new-zanata .bg--highest--hover:hover, .new-zanata .bg--low,
 .new-zanata .bg--low--hover:hover, .new-zanata .bg--lower,
 .new-zanata .bg--lower--hover:hover, .new-zanata .bg--lowest,
-.new-zanata .bg--lowest--hover:hover, .new-zanata .list--highlight li, .new-zanata .form--search:before, .new-zanata .tabs--lined > .tabs__nav a:after, .new-zanata .dropdown__toggle, .new-zanata .dropdown__toggle__icon, .new-zanata .dropdown__toggle__icon:before, .new-zanata .message--global, .new-zanata input[type="submit"],
+.new-zanata .bg--lowest--hover:hover, .new-zanata .list--highlight li, .new-zanata .form--search:before, .new-zanata .tabs--lined > .tabs__nav a:after, .new-zanata .progress-bar, .new-zanata .progress-bar--large, .new-zanata .dropdown__toggle, .new-zanata .dropdown__toggle__icon, .new-zanata .dropdown__toggle__icon:before, .new-zanata .message--global, .new-zanata input[type="submit"],
 .new-zanata button,
 .new-zanata .button,
 .new-zanata .button--large,
@@ -2402,33 +2402,18 @@ Centered grids align grid items centrally without needing to use push or pull cl
   -moz-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -o-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
 }
 .new-zanata .is-transition-fast {
   -webkit-transition: 0.1s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -moz-transition: 0.1s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -o-transition: 0.1s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   transition: 0.1s cubic-bezier(0.26, 0.47, 0.36, 0.94);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
 }
 .new-zanata .is-transition-bounce, .new-zanata .dropdown, .new-zanata .dropdown__content, .new-zanata .panels, .new-zanata .panels--2, .new-zanata .panels--3 {
   -webkit-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
   -moz-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
   -o-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
   transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
 }
 .new-zanata .is-removed {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
@@ -4264,19 +4249,10 @@ Keep focus while showing and hiding a password field
 }
 
 .new-zanata .progress-bar, .new-zanata .progress-bar--large {
-  -webkit-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
-  -moz-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
-  -o-transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
-  transition: 0.3s cubic-bezier(0.26, 0.47, 0.36, 0.94);
   -webkit-transition-delay: 0.2s;
   -moz-transition-delay: 0.2s;
   -o-transition-delay: 0.2s;
   transition-delay: 0.2s;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
   position: relative;
   width: 100%;
   height: 0.40625em;
@@ -5651,11 +5627,6 @@ a.loader.is-active, a.is-active.loader--large, a.is-active.loader--huge {
   table-layout: fixed;
 }
 .new-zanata .panels--2 {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
   position: relative;
   left: 0;
   width: 200%;
@@ -5832,6 +5803,9 @@ a.loader.is-active, a.is-active.loader--large, a.is-active.loader--huge {
 }
 .new-zanata .rf-au-shdw {
   border: none;
+  padding: 0;
+  top: 0;
+  left: 0;
 }
 .new-zanata .rf-au-shdw-t, .new-zanata .rf-au-shdw-l, .new-zanata .rf-au-shdw-r, .new-zanata .rf-au-shdw-b {
   background-image: none;
@@ -5992,11 +5966,6 @@ a.loader.is-active, a.is-active.loader--large, a.is-active.loader--huge {
 }
 @media (max-width: 58.0625em) {
   .new-zanata .header__main-nav__group {
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
     -webkit-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
     -moz-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
     -o-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
@@ -6246,11 +6215,6 @@ a.loader.is-active, a.is-active.loader--large, a.is-active.loader--huge {
   }
 }
 .new-zanata .header__user-nav__toggle {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
   position: relative;
   display: block;
   right: 0;
@@ -6275,11 +6239,6 @@ a.loader.is-active, a.is-active.loader--large, a.is-active.loader--huge {
   }
 }
 .new-zanata .header__user-nav__menu {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
   -webkit-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
   -moz-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
   -o-transition: 0.3s cubic-bezier(0.55, -0.38, 0.22, 1.01);
