--- a/src/assets/sass/_components/_panels.scss
+++ b/src/assets/sass/_components/_panels.scss
@@ -15,7 +15,7 @@
 
 .panels--2 {
   @extend .panels;
-  @include backface-visibility(hidden);
+  // @include backface-visibility(hidden);
   position: relative;
   left: 0;
   width: 200%;
