--- a/src/assets/sass/_components/_rf-rich-faces.scss
+++ b/src/assets/sass/_components/_rf-rich-faces.scss
@@ -61,6 +61,9 @@
 
 .rf-au-shdw {
   border: none;
+  padding: 0;
+  top: 0;
+  left: 0;
 }
 
 .rf-au-shdw-t, .rf-au-shdw-l, .rf-au-shdw-r, .rf-au-shdw-b {
